# aws-lambda-sensu-handlers

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
requirements/: requirements-local.txt  requirements-test.txt  requirements.txt
sensu_handlers/: function.py  sensu_handlers.py  test_sensu_handlers.py
sensu_handlers/tests/: test_sensu_handlers.py
