[tool.poetry]
name = "sensu_handlers"
version = "0.1.0"
description = "Tool to pull sensu handler keys from pagerduty"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-logging = "0.1.1"
boto3 = "^1.14.27"
requests = "^2.24.0"
pytest-mock = "^3.2.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
mypy = "^0.782"
pytest = "^5.3.5"
pytest-black = "^0.3.8"
pytest-cov = "^2.8.1"
pytest-pycodestyle = "^2.0.0"
reorder-python-imports = "^2.0.0"
safety = "^1.9.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.aws-lambda-sensu-handlers-env
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

