[tool.poetry]
name = "sensu_handlers"
version = "0.0.0"
description = "Tool to pull sensu handler keys from pagerduty"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "~3.8"
aws-lambda-powertools = "^1.14.0"
boto3 = "^1.17.53"
credstash = "^1.17.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
mypy = "^0.812"
black = "^20.8b1"
pytest = "^6.2.3"
pytest-black = "^0.3.12"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-pycodestyle = "^2.2.0"
reorder-python-imports = "^2.4.0"
safety = "^1.10.3"
gitdb = "^0.6.4"
version-incrementor = "^0.9.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.aws-lambda-sensu-handlers-env
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

